# terminal-whiteboard

./: .gitignore  LICENSE  README.md  pyproject.toml
src/terminal_whiteboard/: __init__.py  cli.py  renderer.py
tests/: test_renderer.py
