[project]
name = "terminal-whiteboard"
version = "0.1.0"
description = "Generate rough terminal-style whiteboard visuals for technical posts, docs, explainers, and AI-agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Kenny Trinh" }]
keywords = ["diagram", "social", "whiteboard", "terminal", "visual", "ai-agent", "agent-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
]
dependencies = ["pillow>=10.0"]

[project.urls]
Homepage = "https://github.com/kp9z/terminal-whiteboard"
Repository = "https://github.com/kp9z/terminal-whiteboard"
Issues = "https://github.com/kp9z/terminal-whiteboard/issues"

[project.scripts]
terminal-whiteboard = "terminal_whiteboard.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
